workspace-sf/force-app/main/default/objects/Contract_Event__e/Contract_Event__e.object-meta.xml
<CustomObject>
    <label>Contract Event</label>
    <pluralLabel>Contract Events</pluralLabel>
</CustomObject>