workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>AcctId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>