workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/CanalDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CanalDistribuicao__c</fullName>
    <label>CanalDistribuicao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>