workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/CodigoAnexoContrato__c.field-meta.xml
<CustomField>
    <fullName>CodigoAnexoContrato__c</fullName>
    <label>CodigoAnexoContrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>