workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/CodigoCorretor__c.field-meta.xml
<CustomField>
    <fullName>CodigoCorretor__c</fullName>
    <label>CodigoCorretor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>