workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/CodigoRamo__c.field-meta.xml
<CustomField>
    <fullName>CodigoRamo__c</fullName>
    <label>CodRam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>