workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <label>ContractNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>