workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/ContratoParceiro__c.field-meta.xml
<CustomField>
    <fullName>ContratoParceiro__c</fullName>
    <label>ContratoParceiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>