workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/DadosEndosso__c.field-meta.xml
<CustomField>
    <fullName>DadosEndosso__c</fullName>
    <label>DadosEndosso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>