workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/DataEmissao__c.field-meta.xml
<CustomField>
    <fullName>DataEmissao__c</fullName>
    <label>DataEmissao</label>
    <type>Date</type>
</CustomField>