workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/DescontoAgravoMonetarioTecnico__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoMonetarioTecnico__c</fullName>
    <label>DescontoAgravoMonetarioTecnico</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>