workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/DescontoAgravoPercentualInformado__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoPercentualInformado__c</fullName>
    <label>DescontoAgravoPercentualInformado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>