workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/IdContratanteParceiro__c.field-meta.xml
<CustomField>
    <fullName>IdContratanteParceiro__c</fullName>
    <label>IdContratanteParceiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>