workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/IdContrato__c.field-meta.xml
<CustomField>
    <fullName>IdContrato__c</fullName>
    <label>IdContrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>