workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/IdContratoParceiro__c.field-meta.xml
<CustomField>
    <fullName>IdContratoParceiro__c</fullName>
    <label>IdContratoParceiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>