workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/IdSeguradoParceiro__c.field-meta.xml
<CustomField>
    <fullName>IdSeguradoParceiro__c</fullName>
    <label>IdSeguradoParceiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>