workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/ImprimirCertificadoSeguro__c.field-meta.xml
<CustomField>
    <fullName>ImprimirCertificadoSeguro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ImprimirCertificadoSeguro</label>
    <type>Checkbox</type>
</CustomField>