workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/MeioComercializacao__c.field-meta.xml
<CustomField>
    <fullName>MeioComercializacao__c</fullName>
    <label>MeioComercializacao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>