workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/NumeroApolice__c.field-meta.xml
<CustomField>
    <fullName>NumeroApolice__c</fullName>
    <label>NumeroApolice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>