workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <label>Oportunidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>