workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/Parceiro__c.field-meta.xml
<CustomField>
    <fullName>Parceiro__c</fullName>
    <label>Parceiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>