workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/Parceria__c.field-meta.xml
<CustomField>
    <fullName>Parceria__c</fullName>
    <label>Parceria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>