workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/PremioInformado__c.field-meta.xml
<CustomField>
    <fullName>PremioInformado__c</fullName>
    <label>PremioInformado</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>