workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/PremioPuro__c.field-meta.xml
<CustomField>
    <fullName>PremioPuro__c</fullName>
    <label>PremioPuro</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>