workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/Proposta__c.field-meta.xml
<CustomField>
    <fullName>Proposta__c</fullName>
    <label>Proposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>