workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/RamoSeguro__c.field-meta.xml
<CustomField>
    <fullName>RamoSeguro__c</fullName>
    <label>RamoSeguro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>