workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/Seguradora__c.field-meta.xml
<CustomField>
    <fullName>Seguradora__c</fullName>
    <label>Seguradora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>