workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Sucursal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>