workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/TipoEndosso__c.field-meta.xml
<CustomField>
    <fullName>TipoEndosso__c</fullName>
    <label>TipoEndosso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>