workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/TipoRemuneracao__c.field-meta.xml
<CustomField>
    <fullName>TipoRemuneracao__c</fullName>
    <label>TipoRemuneracao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>