workspace-sf/force-app/main/default/objects/Contract_Event__e/fields/ValorPremio__c.field-meta.xml
<CustomField>
    <fullName>ValorPremio__c</fullName>
    <label>ValorPremio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>